--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express": "~4.11.2",
     "static": "~2.0.0",
     "request": "~2.53.0",
-    "node-static": "~0.7.6"
+    "node-static": "~0.7.6",
+    "fs": "0.0.2",
+    "readline": "0.0.7",
+    "csv": "~0.4.1"
   }
 }
