add fuzzy search

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "node-static": "~0.7.6",
     "fs": "0.0.2",
     "readline": "0.0.7",
-    "csv": "~0.4.1"
+    "csv": "~0.4.1",
+    "fuzzy": "~0.1.0",
+    "lodash": "~3.3.0"
   }
 }
